# helper

./: README.md  pyproject.toml
helper/: config.py  singleton.py
helper/llm/: api_manager.py  text.py
helper/search/: search.py  web_selenium.py
helper/tests/: test_search.py
search/: web_request.py
