[tool.poetry]
name = "helper"
version = "0.1.0"
description = ""
authors = ["yichi <hustyichi@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
duckduckgo-search = "^3.6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
